# ritobin-lsp

./: .gitignore  .release-please-manifest.json  Cargo.toml  README.md  flake.nix  package-lock.json  release-please-config.json
.cargo/: config.toml
.github/workflows/: release-please.yml  sync-extension-in-release-pr.yml  update-lockfiles.yml
crates/paths/: Cargo.toml
crates/ritobin-lsp/: CHANGELOG.md  Cargo.toml
crates/ritobin-lsp/src/: config.rs  cst_ext.rs  document.rs  lib.rs  line_ends.rs  main.rs  main_loop.rs  server.rs  worker.rs
crates/ritobin-lsp/src/handlers/: notification.rs  request.rs
crates/ritobin-lsp/src/lol_meta/: hash.rs  mod.rs  schema.rs  service.rs
crates/ritobin-lsp/src/lsp/: capabilities.rs  ext.rs  mod.rs  semantic_tokens.rs
crates/ritobin-lsp/src/lsp/semantic_tokens/: builder.rs  mod.rs  modifier_set.rs  types.rs
crates/ritobin-lsp/src/worker/: diagnostics.rs  semantic_tokens.rs  unhash.rs
editors/code/: .vscodeignore  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/code/editors/code/: CHANGELOG.md
editors/code/src/: bootstrap.ts  client.ts  commands.ts  config.ts  ctx.ts  diagnostics.ts  lang_client.ts  lsp_ext.ts  main.ts  snippets.ts  util.ts
