[package]
name = "ritobin-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
ltk_ritobin = { version = "0.1.5", features = ["serde"] }
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
