[package]
name = "ritobin-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
paths = {workspace = true, features = ["serde1"] }

anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
crossbeam-channel = "0.5.15"
log = "0.4.29"
lsp-server = "0.7.9"
lsp-types = { version = "=0.95.0", features = ["proposed"] }
ltk_ritobin = { git = "https://github.com/LeagueToolkit/league-toolkit.git", rev = "fa1b3d90bc730e230c87d305e4980aa311fe6bb0", features = ["serde"] }
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
semver = "1.0.27"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "registry",
    "fmt",
    "local-time",
    "std",
    "time",
    "tracing-log",
] }
itertools = "0.14.0"
directories-next = "2.0.0"
dashmap = { version = "6.1.0", features = ["serde"] }
